Fix hero section overflow

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,3 +1,8 @@
+.hero {
+  color: var(--white);
+  padding-bottom: 1rem;
+}
+
 .hero img {
   width: clamp(400px, 35vw, 750px);
   margin: 0 auto;
