--- a/styles/index.css
+++ b/styles/index.css
@@ -115,7 +115,6 @@ header {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 85vh;
   color: var(--light);
 }
 
